--- a/lib/mina/templates/unicorn.rb.erb
+++ b/lib/mina/templates/unicorn.rb.erb
@@ -44,9 +44,13 @@ before_fork do |server, worker|
       # someone else did our job for us
     end
   end
+
+  defined?(ActiveRecord::Base) and ActiveRecord::Base.connection.disconnect!
 end
 
 after_fork do |server, worker|
   child_pid = server.config[:pid].sub('.pid', ".#{worker.nr}.pid")
   system("echo #{Process.pid} > #{child_pid}")
+
+  defined?(ActiveRecord::Base) and ActiveRecord::Base.establish_connection
 end
